pulling surveys into student page

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -7,8 +7,10 @@
       <h2>Welcome to DevMountain's</h2>
       <h2>Survey Site</h2>
     </div>
-    <div class="landing-login-button">
-      <a class="header-link" href="/auth/devmtn">Login</a>
+    <div class="landing-login-button ">
+			<!-- TODO: return this for prod -->
+			<!-- <a class="header-link" href="/auth/devmtn">Login</a> -->
+      <a class="header-link" routerLink="/student">Login</a>
     </div>
   </div>
 </section>
