--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-landing></app-landing>
+<router-outlet></router-outlet>
+
+<Footer>
+    <a routerLink="/landing" routerLinkActive="active">Landing</a>
+    <a routerLink="/student" routerLinkActive="active">Student</a>
+		<a routerLink="/admin" routerLinkActive="active">Admin</a>
+</Footer>
