--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -7,10 +7,10 @@
       <h2>Welcome to DevMountain's</h2>
       <h2>Survey Site</h2>
     </div>
-    <div class="landing-login-button ">
+    <div routerLink="/student" class="landing-login-button">
 			<!-- TODO: return this for prod -->
 			<!-- <a class="header-link" href="/auth/devmtn">Login</a> -->
-      <a class="header-link" routerLink="/student">Login</a>
+      <a class="header-link" >Login</a>
     </div>
   </div>
 </section>
