--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,6 +1,6 @@
 <section class="student-main-container">
   <header class="student-surveyHeader">
-    <img class="logo" routerLink="/landing" src="/src/assets/devmountain_logo_whitetext.png" height="70">
+    <img class="logo" src="/src/assets/devmountain_logo_whitetext.png" height="70">
     <ul class="student-nav-links">
       <li class="nav-link" *ngIf="isMentor" routerLink="/admin">Admin</li>
       <li class="student_logout" (click)="studentLogout()">Logout</li>
@@ -8,7 +8,6 @@
   </header>
 
   <div id="survey_container" class="surveyContainer">
-		<!-- NOTE: untakenSurveys isn't working for some reason, address this! -->
     <div class="empty-state" *ngIf="untakenSurveys.length == 0">
       <h4>Looks like you're all caught up on surveys! Thanks for your feedback.</h4>
     </div>
@@ -19,7 +18,7 @@
 				</header>
 				<h5>You have a new survey!</h5>
 				<h4>Your feedback is greatly appreciated.</h4>
-				<button class="dev-mountain-button" ng-click="takeSurvey(survey._id)">Take Survey</button>
+				<button class="dev-mountain-button" [routerLink]="['/takesurvey', survey._id]">Take Survey</button>
 			</div>
 		</div>
 		<div *ngIf="repeatableSurveys.length > 0" class="">
@@ -30,7 +29,7 @@
 				</header>
 				<h5>You have a new survey!</h5>
 				<h4>Your feedback is greatly appreciated.</h4>
-				<button class="dev-mountain-button" ng-click="takeSurvey(survey._id)">Take Survey</button>
+				<button class="dev-mountain-button" [routerLink]="['/takesurvey', survey._id]">Take Survey</button>
 			</div>
 		</div>
 		<div *ngIf="optionalSurveys.length>0">
@@ -41,7 +40,7 @@
 	      </header>
 	      <h5>You have a new survey!</h5>
 	      <h4>Your feedback is greatly appreciated.</h4>
-	      <button class="dev-mountain-button" ng-click="takeSurvey(survey._id)">Take Survey</button>
+	      <button class="dev-mountain-button" [routerLink]="['/takesurvey', survey._id]">Take Survey</button>
 	    </div>
 		</div>
   </div>
