takeSurvey getting close

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 
-<Footer>
+<!-- <Footer>
     <a routerLink="/landing" routerLinkActive="active">Landing</a>
     <a routerLink="/student" routerLinkActive="active">Student</a>
 		<a routerLink="/admin" routerLinkActive="active">Admin</a>
-</Footer>
+</Footer> -->
