--- a/src/app/takesurvey/takesurvey.component.html
+++ b/src/app/takesurvey/takesurvey.component.html
@@ -1,3 +1,65 @@
-<p>
-  takesurvey works!
-</p>
+<div id="takeSurvey" class="takeSurveyContainer">
+  <header class="surveyHeader">
+    <img class="logo" src="../../assets/devmountain_logo_whitetext.png" height="70">
+    <div class="headerTitle">{{survey.name}}</div>
+    <div class="logout" (click)="studentLogout()">Logout</div>
+  </header>
+  <div class="surveyBody">
+
+    <form (ngSubmit)="processForm()">
+      <div class="survey-question" *ngFor="let question of survey.questions; let i = index; trackBy: i">
+
+        <app-numeric-question
+          class="question-directive"
+          [lowValue]="question.lowValue"
+          [highValue]="question.highValue"
+          [required]="question.required"
+          [questionText]="question.questionText"
+          [response]="results.answers[i]"
+          [questionIndex]="i"
+          [questionType]="question.type"
+          [notAnswered]="notAnswered"
+          *ngIf="question.type === 'numeric'">
+        </app-numeric-question>
+
+        <app-boolean-question
+          class="question-directive"
+          [required]="question.required"
+          [questionText]="question.questionText"
+          [response]="results.answers[i]"
+          [questionIndex]="i"
+          [questionType]="question.type"
+          [notAnswered]="notAnswered"
+          [borderOnYes]="borderOnYes"
+          [borderOnNo]="borderOnNo"
+          *ngIf="question.type === 'boolean'">
+        </app-boolean-question>
+
+        <app-text-question
+          class="question-directive"
+					[required]="question.required"
+          [questionText]="question.questionText"
+          [response]="results.answers[i]"
+          [questionIndex]="i"
+          [questionType]="question.type"
+          [notAnswered]="notAnswered"
+          *ngIf="question.type === 'text'">
+        </app-text-question>
+
+      </div>
+      <div class="submit_div">
+        <p class="error_msg" *ngIf="errorMsg">{{errorMsg}}</p>
+        <input class="button" type="submit">
+      </div>
+      <div id="validation_modal" class="modal">
+        <div class="modal-content">
+          <h4>Validation Error</h4>
+          <p class="red_modal_font">Please answer all required questions shown in red</p>
+        </div>
+        <div class="modal-footer">
+          <span class="modal-action modal-close waves-effect waves-green btn-flat">OK</span>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
