fixed tooltip issue on survey Component

--- a/src/app/numeric-question/numeric-question.component.css
+++ b/src/app/numeric-question/numeric-question.component.css
@@ -80,3 +80,6 @@ textarea.materialize-textarea:focus:not([readonly]) {
 textarea.materialize-textarea:focus:not([readonly]) + label {
 	color: #2aabe2;
 }
+input[type=range]{
+	margin-left: 0px;
+}
