--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -1,57 +1,3 @@
-.surveyHeader {
-	display: flex;
-	justify-content: space-between;
-	background-color: #333;
-	width: 100%;
-	height: 70px;
-	line-height: 70px;
-	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2);
-	margin-bottom: 30px;
-}
-
-.surveyHeader .nav-links {
-	width: 75%;
-	display: flex;
-	justify-content: space-around;
-}
-
-.surveyHeader .nav-links a {
-	color: #fff;
-	cursor: pointer;
-	z-index: 10;
-	font-size: 18px;
-}
-
-.surveyHeader .logo {
-	height: 50px;
-	margin-top: 10px;
-}
-
-.surveyHeader .headerTitle {
-	color: #eee;
-	font-family: Helvetica, sans-serif;
-	font-size: 1.5em;
-	height: inherit;
-	line-height: inherit;
-	width: inherit;
-	text-align: center;
-	position: absolute;
-	left: 0;
-	top: 0;
-}
-
-.surveyHeader .logout {
-	padding-right: 20px;
-	color: #fff;
-	cursor: pointer;
-	z-index: 10;
-	font-size: 18px;
-}
-
-.surveyHeader .admin_logout {
-	padding-right: 20px;
-	color: #fff;
-	cursor: pointer;
-	z-index: 10;
-	font-size: 18px;
+.admin-main-container {
+  text-align: center;
 }
