--- a/src/app/student/boolean-question/boolean-question.component.html
+++ b/src/app/student/boolean-question/boolean-question.component.html
@@ -4,16 +4,10 @@
   </p>
 </header>
 <div class="bool_question_container">
-  <div
-    class="bool_question left_bool"
-    [ngClass]="{black_border_and_text: borderOnYes[questionIndex]}"
-    (click)="handleBooleanAnswer(true, questionIndex)">
+  <div class="bool_question left_bool" [ngClass]="{black_border_and_text: borderOnYes[questionIndex]}" (click)="handleBooleanAnswer(true, questionIndex)">
     Yes
   </div>
-  <div
-    class="bool_question right_bool"
-    [ngClass]="{black_border_and_text: borderOnNo[questionIndex]}"
-    (click)="handleBooleanAnswer(false, questionIndex)">
+  <div class="bool_question right_bool" [ngClass]="{black_border_and_text: borderOnNo[questionIndex]}" (click)="handleBooleanAnswer(false, questionIndex)">
     No
   </div>
 </div>
