--- a/src/app/student/numeric-question/numeric-question.component.css
+++ b/src/app/student/numeric-question/numeric-question.component.css
@@ -6,80 +6,90 @@
   color: #fff;
   text-transform: uppercase;
 }
+
 .bright_red {
-	color: #c00;
-	font-weight: bold;
+  color: #c00;
+  font-weight: bold;
 }
+
 .required {
-	color: orangered;
+  color: orangered;
 }
+
 .range-field {
-	position: relative;
-	height: 40px;
-	width: 60%;
-	margin: 0 auto;
-  /*   line-height: 40px; */;
+  position: relative;
+  height: 40px;
+  width: 60%;
+  margin: 0 auto;
+  /*line-height: 40px;*/
 }
+
 .slider_left {
-	position: absolute;
-	left: 0;
-	top: 30px;
-	font-family: Arial;
-	font-size: 0.7em;
+  position: absolute;
+  left: 0;
+  top: 30px;
+  font-family: Arial;
+  font-size: 0.7em;
 }
+
 .slider_left_img {
-	position: absolute;
-	left: 0;
-	top: 50px;
+  position: absolute;
+  left: 0;
+  top: 50px;
 }
+
 .slider_right {
-	position: absolute;
-	right: 0;
-	top: 30px;
-	font-family: Arial;
-	font-size: 0.7em;
+  position: absolute;
+  right: 0;
+  top: 30px;
+  font-family: Arial;
+  font-size: 0.7em;
 }
+
 .slider_right_img {
-	position: absolute;
-	right: 0;
-	top: 50px;
+  position: absolute;
+  right: 0;
+  top: 50px;
 }
 
 h4 {
-	font-family: Helvetica, sans-serif;
-	font-size: 1.8em;
-	color: #001964;
+  font-family: Helvetica, sans-serif;
+  font-size: 1.8em;
+  color: #001964;
 }
 
 h4 .left {
-	color: maroon;
-	margin-right: 10px;
+  color: maroon;
+  margin-right: 10px;
 }
 
 p {
-	font-family: Helvetica, sans-serif;
-	font-size: 1.3em;
-	text-align: center;
+  font-family: Helvetica, sans-serif;
+  font-size: 1.3em;
+  text-align: center;
 }
-input[type=range] + .thumb {
-	background-color: #2aabe2;
+
+input[type=range]+.thumb {
+  background-color: #2aabe2;
 }
 
 input[type=range]::-webkit-slider-thumb {
-	background-color: #2aabe2;
+  background-color: #2aabe2;
 }
 
 input[type=range]::-moz-range-thumb {
-	background-color: #2aabe2;
-}
-textarea.materialize-textarea:focus:not([readonly]) {
-	border-bottom: 1px solid #2aabe2;
-	box-shadow: 0 1px 0 0 #2aabe2;
+  background-color: #2aabe2;
 }
 
-textarea.materialize-textarea:focus:not([readonly]) + label {
-	color: #2aabe2;
+textarea.materialize-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid #2aabe2;
+  box-shadow: 0 1px 0 0 #2aabe2;
 }
-input[type=range]{
-	margin-left: 0px;
+
+textarea.materialize-textarea:focus:not([readonly])+label {
+  color: #2aabe2;
+}
+
+input[type=range] {
+  margin-left: 0px;
 }
