view_badge_requests complete

--- a/src/app/admin/admin-header/admin-header.component.html
+++ b/src/app/admin/admin-header/admin-header.component.html
@@ -9,6 +9,7 @@
       <a>More</a>
       <div class="dropdown-cell">
         <div><a class="admin_logout logout" routerLink="/admin/cohortAdmin">CohortAdmin</a></div>
+        <div><a class="admin_logout logout" routerLink="/admin/cohortAnalytics"> CohortAnalytics</a></div>
         <div><a class="admin_logout logout" (click)="adminLogout()">Logout</a></div>
       </div>
     </li>
