view results component complete

--- a/src/app/admin/view-results/view-results.component.css
+++ b/src/app/admin/view-results/view-results.component.css
@@ -59,7 +59,8 @@ hr {
   background-color: #000;
 }
 
-.ui-grid-footer-info {
+#q_a_table {
+  font-family: 'Lato', sans-serif;
   font-weight: bold;
 }
 
