updated cohort admin so save only appears on change

--- a/src/app/admin/cohort-admin/cohort-admin.component.html
+++ b/src/app/admin/cohort-admin/cohort-admin.component.html
@@ -9,26 +9,26 @@
         DevMtn Cohrt Id {{cohort.dmCohortId}}
       </span>
 
-      <span class="small-btn" style="float:right;margin-right:40px;" [ngClass]="{active:cohort.active,inactive:!cohort.active}" (click)="cohort.active = !cohort.active;edit=true">
+      <span class="small-btn" style="float:right;margin-right:40px;" [ngClass]="{active:cohort.active,inactive:!cohort.active}" (click)="cohort.active = !cohort.active;cohort.edit=true">
         <span *ngIf="cohort.active">Active</span>
       <span *ngIf="!cohort.active">Inactive</span>
       </span>
-      <span class="small-btn" style="float:right;margin-right:40px;" (click)="updateCohort(cohort);edit=false" [ngClass]="{nowidth:!edit}">
+      <span class="small-btn" style="float:right;margin-right:40px;" (click)="updateCohort(cohort);cohort.edit=false" *ngIf="cohort.edit">
         Save
       </span>
     </div>
     <div class="col m6 s12">
-      <input class="col s4" [(ngModel)]="cohort.name" (change)="edit = true">
-      <select style="display:inline-block;" class="col s4" (change)="edit = true" [(ngModel)]="cohort.location.city">
+      <input class="col s4" [(ngModel)]="cohort.name" (keydown)="cohort.edit = true">
+      <select style="display:inline-block;" class="col s4" (change)="cohort.edit = true" [(ngModel)]="cohort.location.city">
       <option *ngFor="let location of locations"> {{ location }} </option>
       </select>
-      <input class="col s4" [(ngModel)]="cohort.slack_channel" (change)="edit = true" placeholder="Slack Channel">
+      <input class="col s4" [(ngModel)]="cohort.slack_channel" (keydown)="cohort.edit = true" placeholder="Slack Channel">
     </div>
     <div class="col m6 s12">
-      <select style="display:inline-block;" class="col s6" (change)="edit = true" [(ngModel)]="cohort.type">
+      <select style="display:inline-block;" class="col s6" (change)="cohort.edit = true" [(ngModel)]="cohort.type">
         <option *ngFor="let type of types">{{ type }}</option>
       </select>
-      <select style="display:inline-block;" class="col s6" (change)="edit = true" [(ngModel)]="cohort.subject">
+      <select style="display:inline-block;" class="col s6" (change)="cohort.edit = true" [(ngModel)]="cohort.subject">
         <option value="" *ngFor="let subject of subjects"> {{ subject }} </option>
       </select>
     </div>
