--- a/src/app/admin/cohort-analytics/cohort-analytics.component.html
+++ b/src/app/admin/cohort-analytics/cohort-analytics.component.html
@@ -1,3 +1,4 @@
-<p>
-  cohort-analytics works!
-</p>
+<app-admin-header></app-admin-header>
+<div class="analytics-wrapper">
+	<app-tableau-interface></app-tableau-interface>
+</div>
