--- a/src/app/admin/cohort-admin/cohort-admin.component.css
+++ b/src/app/admin/cohort-admin/cohort-admin.component.css
@@ -1,7 +1,11 @@
 .admin-main-container {
   text-align: center;
 }
-
+.nowidth {
+  max-width: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  border: 0px solid rgba(50, 50, 50, 0); }
 .small-btn {
   background-color: #1DBDFF;
   color: white;
