--- a/src/app/admin/create-modify-template/question-crud/question-crud.component.html
+++ b/src/app/admin/create-modify-template/question-crud/question-crud.component.html
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div class="input-field col s6">
-    <img class="delete_icon" src="src/assets/delete_icon.jpg" (click)="deleteQuestion(questionIndex)" height="20">
+    <img class="delete_icon" src="/assets/delete_icon.jpg" (click)="deleteQuestion(questionIndex)" height="20">
   </div>
   <hr style="width: 100vw; display: block; color: red; background-color:red;">
 </div>
